--- a/etc/libretro/retroarch.cfg
+++ b/etc/libretro/retroarch.cfg
@@ -2,7 +2,7 @@ all_users_control_menu = "true"
 apply_cheats_after_load = "false"
 apply_cheats_after_toggle = "false"
 aspect_ratio_index = "22"
-assets_directory = ":/assets"
+assets_directory = "~/assets"
 audio_block_frames = "0"
 audio_device = ""
 audio_driver = "alsa"
@@ -45,7 +45,7 @@ cache_directory = "/tmp/ra_cache"
 camera_allow = "false"
 camera_device = ""
 camera_driver = "null"
-cheat_database_path = ":/.config/retroarch/cheats"
+cheat_database_path = "~/.config/retroarch/cheats"
 check_firmware_before_loading = "false"
 cheevos_auto_screenshot = "false"
 cheevos_badges_enable = "false"
@@ -58,15 +58,15 @@ cheevos_token = ""
 cheevos_username = ""
 cheevos_verbose_enable = "false"
 config_save_on_exit = "true"
-content_database_path = ":/.config/retroarch/database/rdb"
-content_favorites_path = ":/.config/retroarch/content_favorites.lpl"
+content_database_path = "~/.config/retroarch/database/rdb"
+content_favorites_path = "~/.config/retroarch/content_favorites.lpl"
 content_history_dir = ""
-content_history_path = ":/.config/retroarch/content_history.lpl"
+content_history_path = "~/.config/retroarch/content_history.lpl"
 content_history_size = "100"
-content_image_history_path = ":/.config/retroarch/content_image_history.lpl"
-content_music_history_path = ":/.config/retroarch/content_music_history.lpl"
+content_image_history_path = "~/.config/retroarch/content_image_history.lpl"
+content_music_history_path = "~/.config/retroarch/content_music_history.lpl"
 content_runtime_log = "false"
-content_runtime_path = ":/.config/retroarch/content_runtime.lpl"
+content_runtime_path = "~/.config/retroarch/content_runtime.lpl"
 content_show_add = "true"
 content_show_favorites = "true"
 content_show_history = "true"
@@ -76,20 +76,20 @@ content_show_netplay = "true"
 content_show_playlists = "true"
 content_show_settings = "true"
 content_show_settings_password = ""
-content_video_history_path = ":/.config/retroarch/content_video_history.lpl"
-core_assets_directory = ":/.config/retroarch/downloads"
+content_video_history_path = "~/.config/retroarch/content_video_history.lpl"
+core_assets_directory = "~/.config/retroarch/downloads"
 core_options_path = ""
 core_set_supports_no_game_enable = "true"
 core_updater_auto_extract_archive = "true"
-core_updater_buildbot_assets_url = "http://buildbot.libretro.com/assets/"
-core_updater_buildbot_url = "http://buildbot.libretro.com/nightly/linux/armhf/latest/"
+core_updater_buildbot_assets_url = "http~//buildbot.libretro.com/assets/"
+core_updater_buildbot_url = "http~//buildbot.libretro.com/nightly/linux/armhf/latest/"
 crt_switch_center_adjust = "0"
 crt_switch_resolution = "0"
 crt_switch_resolution_super = "2560"
 crt_switch_resolution_use_custom_refresh_rate = "false"
 crt_video_refresh_rate = "59.940060"
 current_resolution_id = "0"
-cursor_directory = ":/.config/retroarch/database/cursors"
+cursor_directory = "~/.config/retroarch/database/cursors"
 custom_viewport_height = "720"
 custom_viewport_width = "960"
 custom_viewport_x = "160"
@@ -163,7 +163,7 @@ input_disk_prev = "nul"
 input_disk_prev_axis = "nul"
 input_disk_prev_btn = "nul"
 input_disk_prev_mbtn = "nul"
-input_driver = "sdl2"
+input_driver = "udev"
 input_duty_cycle = "3"
 input_enable_hotkey = "nul"
 input_enable_hotkey_axis = "nul"
@@ -2611,7 +2611,7 @@ input_recording_toggle_axis = "nul"
 input_recording_toggle_btn = "nul"
 input_recording_toggle_mbtn = "nul"
 input_remap_binds_enable = "true"
-input_remapping_directory = ":/.config/retroarch/config/remaps"
+input_remapping_directory = "~/.config/retroarch/config/remaps"
 input_reset = "h"
 input_reset_axis = "nul"
 input_reset_btn = "nul"
@@ -2669,14 +2669,14 @@ input_volume_up = "add"
 input_volume_up_axis = "nul"
 input_volume_up_btn = "nul"
 input_volume_up_mbtn = "nul"
-joypad_autoconfig_dir = ":/joypad_autoconf"
+joypad_autoconfig_dir = "~/joypad_autoconf"
 keyboard_gamepad_enable = "true"
 keyboard_gamepad_mapping_type = "1"
 kiosk_mode_enable = "false"
 kiosk_mode_password = ""
 led_driver = "null"
-libretro_directory = ":/core"
-libretro_info_path = ":/info"
+libretro_directory = "~/core"
+libretro_info_path = "~/info"
 libretro_log_level = "1"
 load_dummy_on_core_shutdown = "true"
 location_allow = "false"
@@ -2791,12 +2791,12 @@ network_remote_enable_user_p6 = "false"
 network_remote_enable_user_p7 = "false"
 network_remote_enable_user_p8 = "false"
 network_remote_enable_user_p9 = "false"
-overlay_directory = ":/.config/retroarch/overlay"
+overlay_directory = "~/.config/retroarch/overlay"
 ozone_menu_color_theme = "0"
 pause_nonactive = "false"
 perfcnt_enable = "false"
 playlist_cores = ""
-playlist_directory = ":/.config/retroarch/playlists"
+playlist_directory = "~/.config/retroarch/playlists"
 playlist_entry_remove = "true"
 playlist_entry_rename = "true"
 playlist_names = ""
@@ -2830,7 +2830,7 @@ rgui_background_filler_thickness_enable = "true"
 rgui_border_filler_enable = "true"
 rgui_border_filler_thickness_enable = "true"
 rgui_browser_directory = "default"
-rgui_config_directory = ":/.config/retroarch/config"
+rgui_config_directory = "~/.config/retroarch/config"
 rgui_internal_upscale_level = "0"
 rgui_menu_color_theme = "4"
 rgui_menu_theme_preset = ""
@@ -2840,15 +2840,15 @@ run_ahead_enabled = "false"
 run_ahead_frames = "1"
 run_ahead_hide_warnings = "false"
 run_ahead_secondary_instance = "false"
-savefile_directory = ":/saves"
+savefile_directory = "~/saves"
 savefiles_in_content_dir = "false"
 savestate_auto_index = "false"
 savestate_auto_load = "false"
 savestate_auto_save = "true"
-savestate_directory = ":/savestates"
+savestate_directory = "~/savestates"
 savestate_thumbnail_enable = "true"
 savestates_in_content_dir = "false"
-screenshot_directory = ":/.config/retroarch/screenshots"
+screenshot_directory = "~/.config/retroarch/screenshots"
 screenshots_in_content_dir = "false"
 show_hidden_files = "false"
 slowmotion_ratio = "3.000000"
@@ -2862,10 +2862,10 @@ stdin_cmd_enable = "false"
 streaming_mode = "0"
 suspend_screensaver_enable = "true"
 sustained_performance_mode = "false"
-system_directory = ":/system"
+system_directory = "~/system"
 systemfiles_in_content_dir = "false"
 threaded_data_runloop_enable = "true"
-thumbnails_directory = ":/.config/retroarch/thumbnails"
+thumbnails_directory = "~/.config/retroarch/thumbnails"
 ui_companion_enable = "false"
 ui_companion_start_on_boot = "true"
 ui_companion_toggle = "false"
@@ -2883,7 +2883,7 @@ video_driver = "gl"
 video_filter = ""
 video_filter_dir = "default"
 video_font_enable = "true"
-video_font_path = ":/assets/xmb/monochrome/font.ttf"
+video_font_path = "~/assets/xmb/monochrome/font.ttf"
 video_font_size = "21.000000"
 video_force_aspect = "true"
 video_force_srgb_disable = "false"
@@ -2915,7 +2915,7 @@ video_rotation = "0"
 video_scale = "3.000000"
 video_scale_integer = "false"
 video_shader = ""
-video_shader_dir = ":/.config/retroarch/shaders"
+video_shader_dir = "~/.config/retroarch/shaders"
 video_shader_enable = "false"
 video_shader_watch_files = "false"
 video_shared_context = "false"
@@ -2939,7 +2939,7 @@ video_windowed_position_y = "0"
 vrr_runloop_enable = "false"
 wifi_driver = "null"
 xmb_alpha_factor = "75"
-xmb_font = ":/assets/xmb/monochrome/font.ttf"
+xmb_font = "~/assets/xmb/monochrome/font.ttf"
 xmb_layout = "0"
 xmb_menu_color_theme = "12"
 xmb_scale_factor = "85"
