final fix to Config for 1.7.6

--- a/etc/libretro/retroarch.cfg
+++ b/etc/libretro/retroarch.cfg
@@ -2687,7 +2687,7 @@ materialui_menu_color_theme = "0"
 memory_show = "false"
 menu_battery_level_enable = "true"
 menu_core_enable = "true"
-menu_driver = "ozone"
+menu_driver = "xmb"
 menu_dynamic_wallpaper_enable = "false"
 menu_entry_hover_color = "ff64ff64"
 menu_entry_normal_color = "ffffffff"
@@ -2705,6 +2705,7 @@ menu_navigation_browser_filter_supported_extensions_enable = "true"
 menu_navigation_wraparound_enable = "true"
 menu_pause_libretro = "true"
 menu_pointer_enable = "false"
+menu_rgui_full_width_layout = "true"
 menu_rgui_lock_aspect = "false"
 menu_shader_pipeline = "2"
 menu_show_advanced_settings = "true"
@@ -2725,6 +2726,7 @@ menu_show_sublabels = "false"
 menu_swap_ok_cancel_buttons = "true"
 menu_throttle_framerate = "true"
 menu_thumbnails = "3"
+menu_ticker_speed = "1.000000"
 menu_ticker_type = "0"
 menu_timedate_enable = "false"
 menu_timedate_style = "5"
@@ -2733,7 +2735,7 @@ menu_unified_controls = "false"
 menu_use_preferred_system_color_theme = "false"
 menu_wallpaper = ""
 menu_wallpaper_opacity = "0.300000"
-midi_driver = "alsa"
+midi_driver = "null"
 midi_input = "Off"
 midi_output = "Off"
 midi_volume = "100"
@@ -2800,6 +2802,9 @@ playlist_directory = "~/.config/retroarch/playlists"
 playlist_entry_remove = "true"
 playlist_entry_rename = "true"
 playlist_names = ""
+playlist_show_core_name = "false"
+playlist_show_sublabels = "false"
+playlist_sort_alphabetical = "true"
 playlist_use_old_format = "false"
 quick_menu_show_add_to_favorites = "true"
 quick_menu_show_cheats = "true"
@@ -2818,6 +2823,7 @@ quick_menu_show_start_streaming = "false"
 quick_menu_show_streaming = "true"
 quick_menu_show_take_screenshot = "true"
 quick_menu_show_undo_save_load_state = "true"
+quit_press_twice = "false"
 record_driver = "null"
 recording_config_directory = ""
 recording_output_directory = ""
@@ -2840,14 +2846,15 @@ run_ahead_enabled = "false"
 run_ahead_frames = "1"
 run_ahead_hide_warnings = "false"
 run_ahead_secondary_instance = "false"
-savefile_directory = "~/saves"
+savefile_directory = "/var/saves/CLV-Z-RETROARCH"
 savefiles_in_content_dir = "false"
 savestate_auto_index = "false"
 savestate_auto_load = "false"
-savestate_auto_save = "true"
-savestate_directory = "~/savestates"
+savestate_auto_save = "false"
+savestate_directory = "/var/saves/CLV-Z-RASAVESTATES"
 savestate_thumbnail_enable = "true"
 savestates_in_content_dir = "false"
+screen_orientation = "0"
 screenshot_directory = "~/.config/retroarch/screenshots"
 screenshots_in_content_dir = "false"
 show_hidden_files = "false"
@@ -2926,7 +2933,7 @@ video_stream_quality = "9"
 video_stream_scale_factor = "1"
 video_stream_url = ""
 video_swap_interval = "1"
-video_threaded = "false"
+video_threaded = "true"
 video_vsync = "true"
 video_window_opacity = "100"
 video_window_save_positions = "false"
@@ -2941,11 +2948,11 @@ wifi_driver = "null"
 xmb_alpha_factor = "75"
 xmb_font = "~/assets/xmb/monochrome/font.ttf"
 xmb_layout = "0"
-xmb_menu_color_theme = "12"
+xmb_menu_color_theme = "6"
 xmb_scale_factor = "85"
 xmb_shadows_enable = "true"
 xmb_show_history = "true"
 xmb_show_settings = "true"
-xmb_theme = "7"
+xmb_theme = "0"
 xmb_vertical_thumbnails = "false"
 youtube_stream_key = ""
